--- a/MyLog/Data/MyLog.Data.DataAccess/MyLog.Data.DataAccess.csproj
+++ b/MyLog/Data/MyLog.Data.DataAccess/MyLog.Data.DataAccess.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+	  <EFStartUpProject>$(EFStartUpProject)</EFStartUpProject>
+	  <EFProject>$(EFProject)</EFProject>
+	  <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
