Migrations und Auth-Projekt eingebunden

--- a/MyLog/Services/MyLog.Services.Api/MyLog.Services.Api.csproj
+++ b/MyLog/Services/MyLog.Services.Api/MyLog.Services.Api.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\ADaxer.Auth\ADaxer.Auth.csproj" />
     <ProjectReference Include="..\..\Core\MyLog.Core.Logic\MyLog.Core.Logic.csproj" />
     <ProjectReference Include="..\..\Data\MyLog.Data.DataAccess\MyLog.Data.DataAccess.csproj" />
   </ItemGroup>
