--- a/MyLog/Services/MyLog.Services.Api/appsettings.Development.json
+++ b/MyLog/Services/MyLog.Services.Api/appsettings.Development.json
@@ -5,7 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Secret": "This key cannot be guessed my friend :-)",
+    "Issuer": "Kiessling-Spedition.de",
+    "Audience": "MyLog.Kiessling-Spedition.de",
+    "TokenLifetime": "03:00:00:00"
+  },
   "ConnectionStrings": {
-    "MyLogDb": "Server=(localdb)\\mssqllocaldb;Database=MyLogTest;Integrated Security=True"
+    "MyLogDb": "Server=(localdb)\\mssqllocaldb;Database=MyLogTest;Integrated Security=True",
+    "UsersDb": "Server=(localdb)\\mssqllocaldb;Database=MyLogUsers;Integrated Security=True"
   }
 }
