--- a/MyLog/Client/MyLog.Client.Razor/MyLog.Client.Razor.csproj
+++ b/MyLog/Client/MyLog.Client.Razor/MyLog.Client.Razor.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ADaxer.Auth\ADaxer.Auth.csproj" />
+    <ProjectReference Include="..\..\Data\MyLog.Data.Models\MyLog.Data.Models.csproj" />
+  </ItemGroup>
 
 </Project>
