--- a/MyLog/Client/MyLog.Client.Razor/appsettings.Development.json
+++ b/MyLog/Client/MyLog.Client.Razor/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Api": {
+    "Url": "https://localhost:7065"
   }
 }
