Fix delete auf RazorPage Movements, HttpClient mit automatischen Token, CORS zu Api, damit von Razor-Client per js erreichbar

--- a/MyLog/Services/MyLog.Services.Api/appsettings.Development.json
+++ b/MyLog/Services/MyLog.Services.Api/appsettings.Development.json
@@ -14,5 +14,10 @@
   "ConnectionStrings": {
     "MyLogDb": "Server=(localdb)\\mssqllocaldb;Database=MyLogTest;Integrated Security=True",
     "UsersDb": "Server=(localdb)\\mssqllocaldb;Database=MyLogUsers;Integrated Security=True"
+  },
+  "Client": {
+    "Razor": {
+      "Url": "https://localhost:7275"
+    }
   }
 }
